# ACSEL

./: .gitignore  LICENSE  README.md
Matlab/: Kullback.m  KullbackNonStruct.m  README.md  computeAbsoluteDiff.m  computeDiff.m  computeDiff.m~  computeMassRelDiffAfter.m  computeMassiveDiff.m  computeMultipleMassiveDiff.m  computeMultipleMassiveDiffAfter.m  computeMultipleMassiveDiffAfter100.m  computeMultipleMassiveDiffAfter500.m  computeMultipleMassiveDiffLast.m  computeRelDiffAfter.m  computeRelativeDiff.m  computeRelativeDiffAt.m  computeRelativeDiffAtNonStruct.m  compute_at_precision.m  getArraysFromFiles.m  getIndexOfLastNonInfValue.m  getRelArraysFromAllRMFiles.m  getRelArraysFromAllRMFilesAtIt.m  getRelArraysFromAllRMFilesAtPre.m  getRelArraysFromFiles.m  getRelCadnaArraysFromFiles.m  matlab.mat  matlab_workspace.mat  plotDistAtPre.m  plot_distance_at_it.m  plot_distance_at_it_100.m  plot_distance_at_it_log_2.m  plot_relative_distance_CADNA_at_it_log_2.m  plot_relative_distance_all_RM_at_it_log_2.m  plot_relative_distance_at_it_log_2.m  plot_with_std.m  plot_without_std.m  plots.m  plots1_relative_error.m
Matlab/oldMatFiles/: computeMassRelDiffAfter.m  computeMassiveDiff.m  computeMultipleMassiveDiff.m  computeMultipleMassiveDiffAfter.m  computeMultipleMassiveDiffLast.m  computeRelativeDiffLast.m  getIndexOfLastNonZeroValue.m  plot_distance_at_it_500.m  plots.m  scriptWindow.m
matrice_grad/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  README.md  main
matrice_grad/old sources/: README.md  matrice_grad.f90  matrice_grad_conj_perso.f90
matrice_grad/src/: CMakeLists.txt  Makefile  help.c  help.h  log.c  log.h  main  main.c  matrice_grad.c  matrice_grad.h  parameters.c  parameters.h
matrice_grad/src/tools/: CMakeLists.txt  Makefile  arrayUtils.c  arrayUtils.h  customMath.c  customMath.h  errorHandling.c  errorHandling.h  inputOutput.c  inputOutput.h  matrixUtils.c  matrixUtils.h  utils.c  utils.h
matrice_grad/tests/: CMakeLists.txt  Makefile  check_array_utils.c  check_custom_math  check_custom_math.c  check_matrix_utils  check_matrix_utils.c  testStochasticRounding.c
matrice_grad_CADNA/: makefile
matrice_grad_CADNA/lib/: SAM_add.cpp  SAM_computedzero.cpp  SAM_convert.cpp  SAM_digitnumber.cpp  SAM_div.cpp  SAM_eq.cpp  SAM_ge.cpp  SAM_gt.cpp  SAM_intr.cpp  SAM_le.cpp  SAM_lt.cpp  SAM_math.cpp  SAM_mul.cpp  SAM_ne.cpp  SAM_private.h  SAM_random.cpp  SAM_str.cpp  SAM_sub.cpp  SAM_to.cpp  SAM_type.cpp  SAM_unstab.cpp  makefile  romb  romb.cpp  simp  simp.cpp  trap  trap.cpp
matrice_grad_CADNA/src/: SAM.h  matrice_grad_CADNA.cpp
readOutputFile/: .gitignore  CMakeLists.txt
readOutputFile/src/: CMakeLists.txt  main  readOutputFile.c  readOutputFile.h
